src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Designation_Permanent__c</fullName>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Acountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Army</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant Proj Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asst. Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiologist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chairman cum Managing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chartered Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Investment Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Details_of_Lead_Source__c</fullName>
        <label>Details of Lead Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disputed_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disputed Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dream_Destination__c</fullName>
        <label>Dream Destination</label>
        <picklist>
            <picklistValues>
                <fullName>Hill Station</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventurous</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Duplicate_Created_Date__c</fullName>
        <label>Duplicate Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Enquiry_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Enquiry Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Received_Date__c</fullName>
        <label>Duplicate Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DuplicatesIdentified__c</fullName>
        <label>Duplicates Identified</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Correspondence__c</fullName>
        <label>Email Correspondence</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_ID_1__c</fullName>
        <label>Email ID 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_ID_2__c</fullName>
        <label>Email ID 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Id_1_Friend__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Id_2_Friend__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Id_3_Friend__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Local__c</fullName>
        <label>Email Local</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Permanent__c</fullName>
        <label>Email Permanent</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email(CP)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Child_1__c</fullName>
        <label>Email id – Child 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Child_2__c</fullName>
        <label>Email id – Child 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Child_3__c</fullName>
        <label>Email id – Child 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Father__c</fullName>
        <label>Email id – Father</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Mother__c</fullName>
        <label>Email id – Mother</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_id_Wife__c</fullName>
        <label>Email id – Spouse</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_contact_number_If_any__c</fullName>
        <label>Emergency Contact Number (If Any)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Enquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner Enquiry</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>Bengali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujarati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marathi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Indian Hindu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parsi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjabi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sindhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Indian Hindu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Size__c</fullName>
        <label>Family Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Father_s_birth_date__c</fullName>
        <label>Father’s Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Favorite_Sport__c</fullName>
        <label>Favorite Sport</label>
        <picklist>
            <picklistValues>
                <fullName>Cricket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Favourite_Cuisine__c</fullName>
        <label>Favourite Cuisine</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maxican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lebanese</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Favourite_holiday_destination__c</fullName>
        <label>Favourite Holiday Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favourite_sport__c</fullName>
        <label>Favourite Sport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Local__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_Permanent__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Fax_correspondence__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Form_16__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 16</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form_Navigator__c</fullName>
        <formula>IMAGE(&apos;/resource/GreenNavImage&apos;, &apos;Green&apos;, 10, ( Total_Page__c * 100 )) &amp;
IMAGE(&apos;/resource/RedNavImage&apos;, &apos;Test IMAGE(image_url, alternate_text [, height, width]) &apos;, 10, (100 - Total_Page__c * 100 )) &amp;
&apos; &apos; &amp;
TEXT (round(Total_Page__c * 100,2)) &amp;
&apos;%&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form % Navigator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSTIN_Of_client__c</fullName>
        <label>GSTIN Of client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Name__c</fullName>
        <label>Guardian Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian1_Type__c</fullName>
        <label>Guardian Type</label>
        <picklist>
            <picklistValues>
                <fullName>S/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardian2_Name__c</fullName>
        <label>Guardian Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian2_Type__c</fullName>
        <label>Guardian Type</label>
        <picklist>
            <picklistValues>
                <fullName>S/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Guardian_F_H_Name__c</fullName>
        <label>Guardian</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Type__c</fullName>
        <label>Guardian Type</label>
        <picklist>
            <picklistValues>
                <fullName>S/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D/O</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <picklist>
            <picklistValues>
                <fullName>Reading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adventure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Painting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Home_Billing_Mailing_Address__c</fullName>
        <label>Billing/Mailing Address (R)</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Income_Bracket__c</fullName>
        <label>Income Bracket</label>
        <picklist>
            <picklistValues>
                <fullName>0-10,000 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10,000-20,000 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20,000-30,000 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30,000-40,000 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40,000-50,000 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50,000 -above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food &amp; Beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not For Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunications</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IsCustomerInsertedinASG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Customer Inserted In ASG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Joint_Owner_Name__c</fullName>
        <label>Joint Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LL_FWP__c</fullName>
        <label>LL/FWP</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LatestDuplicates__c</fullName>
        <label>LatestDuplicates</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Opportunity_Id__c</fullName>
        <label>Latest Opportunity Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locality_CP__c</fullName>
        <label>Locality (CP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_O__c</fullName>
        <label>Locality (O)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locality_R__c</fullName>
        <label>Locality(R)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Pune_O__c</fullName>
        <label>Location(O)</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_Pune_R__c</fullName>
        <label>Location(R)</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Magazines__c</fullName>
        <label>Magazines</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unmarried</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Place_CP__c</fullName>
        <label>Market Place (CP)</label>
        <picklist>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MasterRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile1__c</fullName>
        <label>Mobile1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile2__c</fullName>
        <label>Mobile2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Local__c</fullName>
        <label>Mobile Local</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Permanent__c</fullName>
        <label>Mobile Permanent</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <externalId>true</externalId>
        <label>Mobile (Unique Identifier)</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_correspondence__c</fullName>
        <label>Mobile Correspondence</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mother_s_Birth_Date__c</fullName>
        <label>Mother&apos;s Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Movies__c</fullName>
        <label>Movies</label>
        <picklist>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thriller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horror</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Music__c</fullName>
        <label>Music</label>
        <picklist>
            <picklistValues>
                <fullName>Rock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romantic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Instrumental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melody</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bollywood</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Name_1_Friend__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_Friend__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_Friend__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Child_2__c</fullName>
        <label>Name - Child 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Child_3__c</fullName>
        <label>Name - Child 3</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nature_Of_Business__c</fullName>
        <label>Nature Of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Option 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>option 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Cars_owned__c</fullName>
        <label>Number of Cars Owned</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <picklist>
            <picklistValues>
                <fullName>Salaried</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housewife</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Billing_Mailing_Address__c</fullName>
        <label>Billing/Mailing Address (O)</label>
        <picklist>
            <picklistValues>
                <fullName>Billing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_City__c</fullName>
        <label>City (O)</label>
        <picklist>
            <controllingField>Office_State_Province__c</controllingField>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port Blair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amalapuram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anakapalle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anantapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bapatla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bheemunipatnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhimavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bobbili</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chilakaluripet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chirala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chittoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuddapah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharmavaram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eluru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gooty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudivada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gudur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntakal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guntur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hanamkonda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindupur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaggaiahpet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammalamadugu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadapa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kadiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kakinada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kandukur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kavali</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>